[package]
name = "ministo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
hex = { version = "0.4.3", features = ["serde"] }
rust-randomx = "0.7.5"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
watch = "0.2.3"
