[package]
name = "ministo"
version = "0.1.0"
authors = ["John Mitrich"]
edition = "2021"
description = "RandomX CPU miner written in rust"
repository = "https://github.com/emjomi/ministo"
license = "Apache-2.0"
keywords = ["miner", "cpuminer", "randomx-miner"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
hex = { version = "0.4.3", features = ["serde"] }
rust-randomx = "0.7.5"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tracing = { version = "0.1.40", features = ["max_level_debug", "release_max_level_info"] }
tracing-subscriber = "0.3.18"
watch = "0.2.3"
